finish home page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -128,8 +128,8 @@
                 </span>
               </a>
               <ul class="themes__pop-up">
-                <li style="order: 1;">
-                  <a class="theme__green" >
+                <li style="order: 1">
+                  <a class="theme__green">
                     <span>
                       <svg width="24" height="24">
                         <use xlink:href="#icon-skin-check"></use>
@@ -137,7 +137,7 @@
                     </span>
                   </a>
                 </li>
-                <li class="active" style="order: 2;">
+                <li class="active" style="order: 2">
                   <a class="theme__dgreen">
                     <span>
                       <svg width="24" height="24">
@@ -146,7 +146,7 @@
                     </span>
                   </a>
                 </li>
-                <li style="order: 3;">
+                <li style="order: 3">
                   <a class="theme__dblue">
                     <span>
                       <svg width="24" height="24">
@@ -155,7 +155,7 @@
                     </span>
                   </a>
                 </li>
-                <li style="order: 4;">
+                <li style="order: 4">
                   <a class="theme__amoled">
                     <span>
                       <svg width="24" height="24">
@@ -229,12 +229,16 @@
                       Action, Fantasy, Adventure, Mature, Mystery, Psychological, Supernatural,
                       Martial Arts
                     </p>
-                    <p class="novel__description">
-                      Cairn is a prince who is already tired of ruling. Faced with an imminent
-                      coronation and an overbearing father, he wants nothing more than to drown his
-                      responsibilities in cheap liquor and poor decisions. With the help of his
-                      sister, he hatches a plan to escape the clutches of the throne once and...
-                    </p>
+                    <div class="novel__description">
+                      <p>
+                        Cairn is a prince who is already tired of ruling. Faced with an imminent
+                        coronation and an overbearing father, he wants nothing more than to drown
+                        his responsibilities in cheap liquor and poor decisions. With the help of
+                        his sister, he hatches a plan to escape the clutches of the throne once
+                        and...
+                      </p>
+                      <a href="./main.html" class="description-more">Read more</a>
+                    </div>
                     <div class="novel__rate-date">
                       <div class="unit__rating">
                         <div class="current__rating">
@@ -280,12 +284,16 @@
                       <a href="./main.html" class="novel__link">The Extra of The Lunerra</a>
                     </h2>
                     <p class="novel__tags">Fantasy, Action, Tragedy, Adventure, Romance, Game</p>
-                    <p class="novel__description">
-                      The only game in my life that makes me laugh: The Lands of The Lunerra… I
-                      played this game for six thousand hours in three years, and the day I thought
-                      I had done everything I could in this game, I felt a great emptiness inside
-                      me. I thought nothing in my ordinary and monotonous life could make me...
-                    </p>
+                    <div class="novel__description">
+                      <p>
+                        The only game in my life that makes me laugh: The Lands of The Lunerra… I
+                        played this game for six thousand hours in three years, and the day I
+                        thought I had done everything I could in this game, I felt a great emptiness
+                        inside me. I thought nothing in my ordinary and monotonous life could make
+                        me...
+                      </p>
+                      <a href="./main.html" class="description-more">Read more</a>
+                    </div>
                     <div class="novel__rate-date">
                       <div class="unit__rating">
                         <div class="current__rating">
@@ -328,12 +336,16 @@
                       <a href="./main.html" class="novel__link">Cultist of Cerebon</a>
                     </h2>
                     <p class="novel__tags">Action, Drama, Fantasy, Adventure</p>
-                    <p class="novel__description">
-                      When Zareth first realized he had been reborn into a world that seemed to run
-                      on video game mechanics, he was ecstatic. He’d expected to go on to live an
-                      exciting life filled with danger and adventure. Instead, Zareth spent much of
-                      his new life living on the streets of Tal’Qamar before eventually...
-                    </p>
+                    <div class="novel__description">
+                      <p>
+                        When Zareth first realized he had been reborn into a world that seemed to
+                        run on video game mechanics, he was ecstatic. He’d expected to go on to live
+                        an exciting life filled with danger and adventure. Instead, Zareth spent
+                        much of his new life living on the streets of Tal’Qamar before eventually...
+                      </p>
+                      <a href="./main.html" class="description-more">Read more</a>
+
+                    </div>
                     <div class="novel__rate-date">
                       <div class="unit__rating">
                         <div class="current__rating">
